Updated the css to change the nav bar collapse toggle point and Fixed the LTS version link in banner

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3899,6 +3899,45 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-toggle .icon-bar + .icon-bar {
   margin-top: 4px;
 }
+@media (max-width: 992px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+  top: 0;
+  border-width: 0 0 1px;
+}
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+  margin-top: 7.5px;
+}
+.navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+    display:block !important;
+}
+.navbar-brand{
+  margin-left: 0px  !important;
+}
+}
 @media (min-width: 992px) {
   .navbar-toggle {
     display: none;
@@ -4556,6 +4595,7 @@ a.list-group-item.active > .badge,
 .jumbotron .container {
   max-width: 100%;
 }
+
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding-top: 48px;
@@ -4568,6 +4608,12 @@ a.list-group-item.active > .badge,
   .jumbotron h1,
   .jumbotron .h1 {
     font-size: 67.5px;
+  }
+}
+@media screen and (min-width: 448px) {
+  .container .jumbotron {
+      padding-left: 40px;
+      padding-right: 40px;
   }
 }
 .thumbnail {
@@ -6303,6 +6349,8 @@ embed,
   position: relative;
   background: #243446 url(https://static.jboss.org/example/images/example_heropattern1.png) repeat center center;
   padding: 40px;
+  /* padding-right: 40px !important;
+  padding-left: 40px !important; */
   margin: 0 0 20px 0;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -6886,10 +6934,10 @@ ul.icons-ul {
   #tabnav .tabcontent {
     margin: 0px;
   }
-  .container {
+  /* .container {
     padding-left: 10px;
     padding-right: 10px;
-  }
+  } */
 }
 /* ------------------ Project banner, tagline and tab ------------------------- */
 .banner {
